--- a/frontend/src/locales/es/translation.json
+++ b/frontend/src/locales/es/translation.json
@@ -16,48 +16,48 @@
     "dashboard": "Dashboard"
   },
   "auth": {
-    "welcome_back": "Welcome Back!",
-    "sign_in_subtitle": "Sign in to continue to your dashboard",
-    "email_address": "Email Address",
-    "password": "Password",
-    "sign_in": "Sign In",
-    "continue_google": "Continue with Google",
-    "no_account": "Don't have an account?",
-    "sign_up": "Sign Up",
-    "or": "OR",
-    "forgot_password": "Forgot Password?",
-    "enter_email": "Enter your email address",
-    "enter_password": "Enter your password",
-    "remember_me": "Remember me",
-    "create_account": "Create Account",
-    "full_name": "Full Name",
-    "confirm_password": "Confirm Password",
-    "agree_terms": "I agree to the Terms of Service and Privacy Policy",
-    "agent": "Agent",
-    "check_email": "Check your email for verification link",
-    "create_password": "Create a strong password",
-    "enter_full_name": "Enter your full name",
-    "go_to_login": "Go to Login",
-    "have_account": "Already have an account?",
-    "join_thousands": "Join thousands of property managers",
-    "landlord": "Landlord",
-    "role": "Role",
-    "tenant": "Tenant",
-    "verification_sent": "Verification email sent"
+    "welcome_back": "¡Bienvenido de nuevo!",
+    "sign_in_subtitle": "Inicia sesión para continuar a tu panel",
+    "email_address": "Dirección de correo electrónico",
+    "password": "Contraseña",
+    "sign_in": "Iniciar sesión",
+    "continue_google": "Continuar con Google",
+    "no_account": "¿No tienes una cuenta?",
+    "sign_up": "Registrarse",
+    "or": "O",
+    "forgot_password": "¿Olvidaste tu contraseña?",
+    "enter_email": "Ingresa tu dirección de correo electrónico",
+    "enter_password": "Ingresa tu contraseña",
+    "remember_me": "Recordarme",
+    "create_account": "Crear cuenta",
+    "full_name": "Nombre completo",
+    "confirm_password": "Confirmar contraseña",
+    "agree_terms": "Acepto los Términos de Servicio y la Política de Privacidad",
+    "agent": "Agente",
+    "check_email": "Revisa tu correo electrónico para el enlace de verificación",
+    "create_password": "Crea una contraseña segura",
+    "enter_full_name": "Ingresa tu nombre completo",
+    "go_to_login": "Ir al inicio de sesión",
+    "have_account": "¿Ya tienes una cuenta?",
+    "join_thousands": "Únete a miles de administradores de propiedades",
+    "landlord": "Propietario",
+    "role": "Rol",
+    "tenant": "Inquilino",
+    "verification_sent": "Correo de verificación enviado"
   },
   "common": {
-    "loading": "Loading...",
+    "loading": "Cargando...",
     "error": "Error",
-    "success": "Success",
-    "cancel": "Cancel",
-    "save": "Save",
-    "edit": "Edit",
-    "delete": "Delete",
-    "add": "Add",
-    "view": "View",
-    "close": "Close",
-    "confirm": "Confirm",
-    "yes": "Yes",
+    "success": "Éxito",
+    "cancel": "Cancelar",
+    "save": "Guardar",
+    "edit": "Editar",
+    "delete": "Eliminar",
+    "add": "Agregar",
+    "view": "Ver",
+    "close": "Cerrar",
+    "confirm": "Confirmar",
+    "yes": "Sí",
     "no": "No",
     "welcome_back_user": "Welcome back, {{name}}!",
     "happening_today": "Here's what's happening with your properties today.",
@@ -112,21 +112,21 @@
     "end_date": "End Date"
   },
   "dashboard": {
-    "overview": "Overview",
-    "properties": "Properties",
-    "tenants": "Tenants",
-    "settings": "Settings",
-    "logout": "Logout",
-    "maintenance": "Maintenance",
-    "expenses": "Expenses",
-    "cash_flow": "Cash Flow",
-    "reminders": "Reminders",
-    "approvals": "Approvals",
-    "users_invites": "Users & Invites",
-    "billing": "Billing",
-    "audit_log": "Audit Log",
-    "admin_panel": "Admin Panel",
-    "tenant_portal": "My Portal",
+    "overview": "Resumen",
+    "properties": "Propiedades",
+    "tenants": "Inquilinos",
+    "settings": "Configuración",
+    "logout": "Cerrar sesión",
+    "maintenance": "Mantenimiento",
+    "expenses": "Gastos",
+    "cash_flow": "Flujo de efectivo",
+    "reminders": "Recordatorios",
+    "approvals": "Aprobaciones",
+    "users_invites": "Usuarios e invitaciones",
+    "billing": "Facturación",
+    "audit_log": "Registro de auditoría",
+    "admin_panel": "Panel de administración",
+    "tenant_portal": "Mi portal",
     "monthly_revenue": "Monthly Revenue",
     "total_properties": "Total Properties",
     "active_tenants": "Active Tenants",
